document schema updated
